Table find, findById, base document converter.
* added methods for table: flush, find, findById, insert
* added npm postinstall hook to fetch maven dependencies
* basic JSON to Document converter.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -t 0",
+    "postinstall": "mvn dependency:copy-dependencies",
     "docs": "jsdoc -r lib/* -d ./docs"
   },
   "repository": {
