Condition class bindings.
* added bindings for conditions: eq, neq, le, lte, ge, gte, between, in, nin, exists
* added JSON to Java class convert for Array, Object, Date, String, Number

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "maprdb javascript client",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -t 0",
+    "test": "mocha -t 0 --recursive",
     "postinstall": "mvn dependency:copy-dependencies",
     "docs": "jsdoc -r lib/* -d ./docs"
   },
