--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "mocha -t 0 --recursive",
     "postinstall": "mvn dependency:copy-dependencies",
-    "docs": "jsdoc -r lib/* -d ./docs"
+    "docs": "jsdoc -r -p lib/* -d ./docs"
   },
   "repository": {
     "type": "git",
