--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.2.0",
-    "java": "^0.5.5",
     "jsdoc": "^3.3.2",
     "mocha": "^2.3.0"
+  },
+  "dependencies": {
+    "async": "^1.4.2",
+    "java": "^0.5.5"
   }
 }
