Humanize errors regarding method signature.
Added explicit error messages regarding wrong method signatures
useful for methods with method overload simulation like table.find
table.eachDocument, table.stream, table.findById.
Unit test coverage for MethodOverload class. Better error handling
for method overload.
Refactored unit tests. Created separate folders for unit and
 integration tests.
Refactored table.eachDocument and table.find to use single proxy
method.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "mocha -t 0 --recursive",
     "postinstall": "mvn dependency:copy-dependencies",
-    "docs": "jsdoc -r -p lib/* -d ./docs"
+    "docs": "jsdoc -r -p lib/* -d ./docs",
+    "unit-test": "mocha test/unit -t 0 --recursive"
   },
   "repository": {
     "type": "git",
