Fix #5. Update mapr java dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -23,20 +23,13 @@
       <snapshots><enabled>true</enabled></snapshots>
       <releases><enabled>true</enabled></releases>
     </repository>
-
-    <repository>
-      <id>mapr-private</id>
-      <url> http://repository_cv.mapr.com/maven/</url>
-      <snapshots><enabled>true</enabled></snapshots>
-      <releases><enabled>true</enabled></releases>
-    </repository>
   </repositories>
 
   <dependencies>
     <dependency>
       <groupId>com.mapr.db</groupId>
       <artifactId>maprdb</artifactId>
-      <version>5.0.9-mapr-SNAPSHOT</version>
+      <version>5.0.9-mapr</version>
     </dependency>
   </dependencies>
 
